# kafka-connector

./: .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yml  rust-toolchain
.github/workflows/: rust.yml  tests.yml
core/: Cargo.toml
core/examples/: consumer.rs  producer.rs  raw_api.rs  testing.rs
core/src/: admin_options.rs  common_options.rs  consumer_options.rs  error.rs  kafka_client.rs  lib.rs  main.rs  producer.rs  producer_options.rs  utils.rs
core/src/admin/: options.rs
core/src/broker/: client.rs  error.rs  mod.rs  options.rs
core/src/client/: mod.rs
core/src/cluster/: client.rs  cluster_loop.rs  error.rs  metadata.rs  mod.rs
core/src/consumer/: consumer_loop.rs  error.rs  mod.rs  options.rs
core/src/producer/: error.rs  mod.rs  options.rs  producer_loop.rs  record.rs  send_result_future.rs
core/src/protocol/: error.rs  from_bytes.rs  mod.rs  optional.rs  to_bytes.rs  types.rs
core/src/protocol/api/: add_offsets_to_txn.rs  add_partitions_to_txn.rs  alter_client_quotas.rs  alter_configs.rs  alter_isr.rs  alter_partition_reassignments.rs  alter_replica_log_dirs.rs  alter_user_scram_credentials.rs  api_versions.rs  controlled_shutdown.rs  create_acls.rs  create_delegation_token.rs  create_partitions.rs  create_topics.rs  delete_acls.rs  delete_groups.rs  delete_records.rs  delete_topics.rs  describe_acls.rs  describe_client_quotas.rs  describe_configs.rs  describe_delegation_token.rs  describe_groups.rs  describe_log_dirs.rs  describe_user_scram_credentials.rs  elect_leaders.rs  end_txn.rs  expire_delegation_token.rs  fetch.rs  find_coordinator.rs  header.rs  headers.rs  heartbeat.rs  incremental_alter_configs.rs  init_producer_id.rs  join_group.rs  leader_and_isr.rs  leave_group.rs  list_groups.rs  list_offsets.rs  (+17 more)
core/src/protocol/custom_types/: compact_bytes.rs  compact_nullable_string.rs  compact_string.rs  mod.rs  record_batch.rs  unsigned_varint32.rs  unsigned_varint64.rs  zig_zag_string.rs  zig_zag_varint32.rs  zig_zag_varint64.rs  zig_zag_vec.rs
core/src/tests/: kafka_client.rs  mod.rs
crates/client/: Cargo.toml
crates/client/src/: broker.rs  cluster.rs  lib.rs  protocol_consts.rs  test_utils.rs
crates/client/src/broker/: broker_loop.rs  broker_metadata.rs  connection.rs  controller.rs
crates/client/src/clients/: admin.rs  consumer.rs  producer.rs
crates/client/src/clients/consumer/: client.rs  consumer_loop.rs  error.rs  options.rs  record.rs
crates/client/src/clients/producer/: client.rs  error.rs  future_record.rs  options.rs  partitioner.rs  producer_loop.rs
crates/client/src/clients/producer/partitioner/: crc32.rs  fnv1a.rs  murmur2.rs  random.rs
crates/client/src/cluster/: controller.rs  error.rs  options.rs  send_api_request.rs
crates/client/tests/: broker_offline.rs  cluster.rs  connection.rs  consumer.rs  producer.rs  simple_produce_fetch.rs
crates/client/tests/common/: cluster.rs  mod.rs  test_topic.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  test_utils.rs
crates/core/src/broker/: errors.rs  mod.rs
crates/core/src/cluster/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/messages/: README.md
crates/protocol/src/: api_call.rs  api_error.rs  api_numbers.rs  from_bytes.rs  generator.rs  lib.rs  prelude.rs  to_bytes.rs
crates/protocol/src/api/: api_versions.rs  generator.rs  header.rs  mod.rs
crates/protocol/src/api/codegen/: api_versions.rs  metadata.rs  mod.rs
crates/protocol/src/api/definitions/: api_versions.rs  metadata.rs  mod.rs
crates/protocol/src/generator/: codegen.rs  mod.rs  parse.rs  structs.rs
crates/protocol/src/records/: base_types.rs  header.rs  mod.rs  record.rs  record_batch.rs
crates/protocol/src/types/: from_bytes.rs  mod.rs  tag_buffer.rs  to_bytes.rs  unsigned_varint32.rs
derive/: Cargo.toml
derive/src/: from_bytes.rs  lib.rs  to_bytes.rs
parser/: Cargo.toml  protocol.html
parser/protocol_files/: css.css
parser/src/: generator.rs  lib.rs  main.rs  model.rs  parser.rs  transformer.rs  transformer_step1.rs  transformer_step2.rs  utils.rs
protocol/: Cargo.toml
protocol/src/: api_error.rs  error.rs  from_bytes.rs  lib.rs  optional.rs  to_bytes.rs
protocol/src/api/: add_offsets_to_txn.rs  add_partitions_to_txn.rs  alter_client_quotas.rs  alter_configs.rs  alter_isr.rs  alter_partition_reassignments.rs  alter_replica_log_dirs.rs  alter_user_scram_credentials.rs  api_versions.rs  controlled_shutdown.rs  create_acls.rs  create_delegation_token.rs  create_partitions.rs  create_topics.rs  delete_acls.rs  delete_groups.rs  delete_records.rs  delete_topics.rs  describe_acls.rs  describe_client_quotas.rs  describe_configs.rs  describe_delegation_token.rs  describe_groups.rs  describe_log_dirs.rs  describe_user_scram_credentials.rs  elect_leaders.rs  end_txn.rs  expire_delegation_token.rs  fetch.rs  find_coordinator.rs  header.rs  heartbeat.rs  incremental_alter_configs.rs  init_producer_id.rs  join_group.rs  leader_and_isr.rs  leave_group.rs  list_groups.rs  list_offsets.rs  list_partition_reassignments.rs  (+16 more)
protocol/src/custom_types/: compact_bytes.rs  compact_nullable_string.rs  compact_string.rs  mod.rs  nullable_str.rs  nullable_string.rs  optional.rs  record_batch.rs  tag_buffer.rs  unsigned_varint32.rs  unsigned_varint64.rs  zig_zag_string.rs  zig_zag_varint32.rs  zig_zag_varint64.rs  zig_zag_vec.rs
protocol/src/custom_types/record_batch/: batch.rs  header.rs  mod.rs  record.rs  record_batch_with_size.rs
proxy/: Cargo.toml
proxy/src/: main.rs
