[package]
name = "kafka-connector"
version = "0.1.0"
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
tokio = {version ="1.0.1", features=["rt-multi-thread","net","macros","io-util"]}
kafka-connector-protocol = {version="0.1.0", path = "./../protocol"}
thiserror = "1.0.23"
log = "0.4.13"

[dev-dependencies]
env_logger="0.8.2"