[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2018"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector"
repository = "https://github.com/Kononnable/kafka-connector"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
async-stream = "0.3.0"
bytes = "1.0.1"
futures = "0.3.13"
futures-util = "0.3.12"
kafka-connector-protocol = {version = "0.1.0", path = "./../protocol"}
log = "0.4.13"
serde = "1.0.123"
thiserror = "1.0.23"
tokio = {version = "1.0.1", features = ["rt-multi-thread", "net", "macros", "io-util"]}
tokio-stream = "0.1.5"
typed-builder = "0.9.0"

[dev-dependencies]
env_logger = "0.8.2"
