[package]
name = "kafka-connector-derive"
version = "0.1.0"
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust client for Apache Kafka"
repository = "https://github.com/Kononnable/kafka-connector"
keywords = ["kafka"]

[lib]
proc-macro = true


[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "visit-mut","derive","extra-traits"] }
