[package]
name = "kafka-connector-protocol"
version = "0.1.0"
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.0.1"
kafka-connector-derive = {version="0.1.0", path = "./../derive"}
thiserror = "1.0.23"
unsigned-varint = "0.6.0"
log = "0.4.13"
bitflags = "1.2.1"
crc32c="0.6.0"