[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2021"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector-client"
repository = "https://github.com/kononnable/kafka-connector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
indexmap = "2.2.5"
kafka-connector-protocol = { version = "0.1.0", path = "./../protocol" }
log = "0.4.21"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "macros", "io-util"] }
