[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2021"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector-client"
repository = "https://github.com/kononnable/kafka-connector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
derivative = "2.2.0"
indexmap = "2.2.5"
kafka-connector-protocol = { version = "0.1.0", path = "./../protocol" }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["net", "io-util", "rt", "sync", "time", "macros"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1.40", features = ["log"] }
rustc-hash = "2.0.0"

[dev-dependencies]
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
tokio = { version = "1.36.0", features = ["test-util"] }