[package]
authors.workspace = true
description = "Rust client for Apache Kafka"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "kafka-connector-client"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes = "1.6.0"
derivative = "2.2.0"
indexmap = "2.2.5"
kafka-connector-protocol = { version = "0.1.0", path = "./../protocol" }
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["net", "io-util", "rt", "sync", "time", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
tokio = { version = "1.36.0", features = ["test-util"] }