[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2021"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector"
repository = "https://github.com/kononnable/kafka-connector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka-connector-protocol = { version = "0.1.0", path = "./../protocol" }

log = "0.4.17"
thiserror = "1.0.32"
tokio = { version = "1.24.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "io-util",
    "time",
] }
bytes = "1.3.0"

[dev-dependencies]
env_logger = "0.10.0"
