[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2021"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector-protocol"
repository = "https://github.com/kononnable/kafka-connector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
thiserror = "1.0.56"
indexmap = "2.2.5"

[dev-dependencies]
anyhow = "1.0.76"
convert_case = "0.6.0"
expect-test = "1.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
