[package]
authors.workspace = true
description = "Rust client for Apache Kafka"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "kafka-connector-protocol"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bitflags = "2.10.0"
bytes = "1.5.0"
crc32c = "0.6.8"
thiserror = "2.0.12"
indexmap = "2.2.5"
unsigned-varint = "0.8.0"

[dev-dependencies]
anyhow = "1.0.76"
convert_case = "0.8.0"
expect-test = "1.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
